# new0

./: README.md  pyproject.toml
.github/workflows/: ci.yml
new0/: __init__.py  __main__.py  compat.py
tests/: test_package.py
